Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -114,3 +114,9 @@ hr {
     transform: translateY(0) scale(1);
   }
 }
+
+@media (hover: none) and (pointer: coarse) {
+  .modal-dialog {
+    padding-top: 2.5rem;
+  }
+}
